# privacyidea-pam

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Config.h  PrivacyIDEA.h  Response.h  privacyIDEA.h  privacyidea.h  response.h
samples/: privacyidea-2nd-auth  privacyidea-auth
src/: PrivacyIDEA.cpp  Util.cpp  pam_privacyidea.cpp  privacyidea.cpp
